<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menuItemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="12dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/design_default_color_primary"
            android:text=" "/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >

            <TextView android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="05dp"
                />

            <TextView android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <TextView android:id="@+id/itemCaffeineAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <TextView android:id="@+id/addToCartButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="ADD TO CART"
                android:background="@drawable/button_background"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                />

            <LinearLayout android:id="@+id/addMoreLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView android:id="@+id/imageMinus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_minus_circle"
                    app:tint="@color/purple_700"
                    />


                <TextView android:id="@+id/qtyCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="05dp"
                    android:layout_marginEnd="05dp"
                    android:textColor="@color/black"
                    android:text="1"
                    android:gravity="center_horizontal"
                    />

                <ImageView android:id="@+id/imageAdd"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_add_circle"
                    app:tint="@color/purple_700"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>