<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MenuActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menuRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:paddingBottom="70dp"
        />

    <TextView android:id="@+id/buttonCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="CHECKOUT"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        />

</androidx.constraintlayout.widget.ConstraintLayout>