...
        android:layout_height="50dp"
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOG OUT" />

        <Button
            android:id="@+id/button_order_history"
...
