...
            android:layout_margin="10dp"
            android:text="$0.0"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"/>

        <TextView android:id="@+id/buttonPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderTotal"
            android:text="PLACE YOUR ORDER"
...
